Make search result optional

--- a/src/app/comp/node-inspector/config-node/config-node.component.html
+++ b/src/app/comp/node-inspector/config-node/config-node.component.html
@@ -4,7 +4,7 @@
             <i class="bi bi-c-square-fill me-1"></i>
             {{ l10nphrase.result.config.nodeInspector.subject }}
         </div>
-        <h5 class="mb-0" [innerHTML]="nodeItem.name | highlight: searchResult.search.phrase"></h5>
+        <h5 class="mb-0" [innerHTML]="nodeItem.name | highlight: searchResult?.search?.phrase"></h5>
     </div>
     <div>
         <button type="button" class="btn btn-sm px-2" (click)="onChangeColor.emit()">
@@ -22,8 +22,8 @@
             </tr>
             <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.uuid"
                 [valueToCopy]="nodeItem.uuid">
-                @if (searchResult.search.filter.includeUuids) {
-                <code [innerHTML]="nodeItem.uuid | highlight: searchResult.search.phrase"></code>
+                @if (searchResult?.search?.filter?.includeUuids) {
+                <code [innerHTML]="nodeItem.uuid | highlight: searchResult?.search?.phrase"></code>
                 }
                 @else {
                 <code>{{nodeItem.uuid}}</code>
@@ -35,12 +35,12 @@
             </tr>
             <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.value"
                 [valueToCopy]="nodeItem.value || undefined">
-                <code [innerHTML]="nodeItem.value || '&lt;null&gt;' | highlight: searchResult.search.phrase"></code>
+                <code [innerHTML]="nodeItem.value || '&lt;null&gt;' | highlight: searchResult?.search?.phrase"></code>
             </tr>
             <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.description"
                 [valueToCopy]="nodeItem.description || undefined">
-                @if (!searchResult.search.filter.excludeBComments || !nodeItem.description?.startsWith('[B]')) {
-                <code [innerHTML]="nodeItem.description | highlight: searchResult.search.phrase"></code>
+                @if (!searchResult?.search?.filter?.excludeBComments || !nodeItem.description?.startsWith('[B]')) {
+                <code [innerHTML]="nodeItem.description | highlight: searchResult?.search?.phrase"></code>
                 }
                 @else {
                 <code>{{nodeItem.description}}</code>
